# LibreCommander

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_AUDIT.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: opencode.yml  release.yml  rust.yml
.serena/: project.yml
.serena/memories/: architecture_modules.md  code_style.md  key_symbols.md  main_rs_navigation.md  project_overview.md  suggested_commands.md  task_completion.md  testing_patterns.md
assets/: README.md
src/: lib.rs  main.rs  menu.rs  render.rs  render_dialog_map.rs  tests.rs
src/app/: bg_load.rs  config.rs  debug_log.rs  dir_tree.rs  file_type.rs  job_runner.rs  keymap.rs  mime.rs  mod.rs  panel_ops.rs  paths.rs  shell.rs  types.rs  user_menu.rs  watcher_sync.rs
src/app/types/: app_state.rs  dialogs.rs  file_entry.rs  mod.rs  modes.rs  panel.rs  sorting.rs  test_helpers.rs  tests.rs  text_input.rs
src/app/watcher_sync/: tests.rs
src/fs/: cha.rs  mod.rs  path.rs  reader.rs  watcher.rs
src/fs/watcher/: tests.rs
src/input/: command_line.rs  dialogs.rs  directory_tree.rs  menu_actions.rs  mod.rs  mode_dispatch.rs  mouse.rs  normal.rs  pickers.rs
src/input/mouse/: tests.rs
src/ops/: async_ops.rs  batch.rs  chunk_copy.rs  compare.rs  file_ops.rs  helpers.rs  mod.rs  natsort.rs  search.rs  sorting.rs
src/ops/archive/: create.rs  extract.rs  list.rs  mod.rs  sevenz.rs  tar.rs  zip.rs
src/ops/batch/: tests.rs
src/ops/file_ops/: common.rs  copy.rs  delete.rs  entry_ops.rs  mod.rs  move_ops.rs  temp.rs
src/ops/search/: content.rs  model.rs  name.rs  pattern.rs  walk.rs
src/ops/sorting/: tests.rs
src/tests/: background_load.rs  compare.rs  dialogs.rs  helpers.rs  history.rs  keybinds.rs  keyevents.rs  menu.rs  misc.rs  mod.rs  overwrite.rs  pickers.rs  search.rs  selection.rs  user_menu.rs  viewer.rs
src/ui/: dialogs.rs  dir_tree.rs  menu.rs  mod.rs  panels.rs  theme.rs  viewer.rs
src/ui/dialogs/: archive.rs  confirm.rs  help.rs  input.rs  layout.rs  list_picker.rs  mod.rs  simple.rs  tests.rs  text.rs
src/ui/panels/: mod.rs  tests.rs
src/ui/viewer/: hex.rs  loader.rs  mime.rs  mod.rs  open.rs  render.rs  scroll.rs  search.rs  tests.rs  toggle.rs
