[package]
name = "lc"
version = "0.0.12"
edition = "2024"
rust-version = "1.95"
description = "A fast Rust terminal file manager inspired by Midnight Commander"
license = "MIT"
readme = "README.md"
repository = "https://github.com/leszek3737/lc---Libre-Commander"

[dependencies]
bitflags = "2"
chrono = "0.4.44"
dirs = "6"
memchr = "2"
rayon = "1"
crossterm = "0.29.0"
filetime = "0.2"
infer = "0.19"
ratatui = "0.30.0"
regex = "1"
shlex = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "1"
unicode-width = "0.2"
users = "0.11.0"
unicode-segmentation = "1"
ansi-to-tui = "8.0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify = "8"

[lints.clippy]
too_many_lines = "warn"
cognitive_complexity = "warn"
module_inception = "warn"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
inefficient_to_string = "warn"

[lints.rust]
unsafe_code = "forbid"
