[package]
name = "lc"
version = "0.0.12"
edition = "2024"
rust-version = "1.95"
description = "A fast Rust terminal file manager inspired by Midnight Commander"
license = "MIT"
readme = "README.md"
repository = "https://github.com/leszek3737/LibreCommander"

[dependencies]
bzip2 = "0.6"
chrono = "0.4.44"
dirs = "6"
flate2 = "1"
libc = "0.2"
lzma-rs = "0.3"
memchr = "2"
crossterm = "0.29.0"
filetime = "0.2"
ratatui = "0.30.0"
regex = "1"
sevenz-rust = "0.6"
shlex = "2"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
toml = "1"
unicode-width = "0.2"
unicode-segmentation = "1"
ansi-to-tui = "8.0.1"
zip = "8"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"

# Release: maximize runtime performance of the single binary.
# LTO + a single codegen unit let the optimizer inline across crate
# boundaries (slower link, faster/smaller binary).
[profile.release]
lto = true
codegen-units = 1

# Dev: light optimization keeps TUI interaction responsive while
# preserving full debug info and fast incremental rebuilds.
[profile.dev]
opt-level = 1

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

# NSS user/group name lookups are Unix-only; the crate does not compile on
# Windows (raw libc getpwuid_r etc.), and all its call sites are cfg(unix).
[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify = "8"

[lints.clippy]
too_many_lines = "warn"
cognitive_complexity = "warn"
module_inception = "warn"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
inefficient_to_string = "warn"

[lints.rust]
unsafe_code = "forbid"
